# SMHI-master-project

./: .gitignore  README.md  SMHI Projektbeskrivning Valter Fallenius.docx  Valter Fallenius, BerzeLiUs application.docx  ~$lter Fallenius, BerzeLiUs application.docx
Data/: animate_combined.py  contour_ani.py  coord_transform.py  erosion.py  transform_data.py  visualize combined.py  visualize data.py
Källor/: digitala källor.docx
Network/: animate_combined.py  contour_ani.py  coord_transform.py  grid_with_projection.py  grid_with_projection2.py  load_data.py  network.py  paramiko_import.py  prepare_data.py  prepare_data_MetNet.py  transform_data.py  visualize combined.py  visualize data.py
Network/Old/: animate.py
Network/grids_demo-master/: .gitignore  pyproject.toml
Network/grids_demo-master/grids/: constants.py  grid_with_projection.py  grid_with_projection_helpers.py
Network/grids_demo-master/tests/: test_grids.py
